# hawser

./: .gitignore  .travis.yml  COPYING  COPYING.LGPL  Makefile  Makefile.am  README.md  autogen  autogen.sh  configure.ac  credentials.c
include/hawser/: ec2.h  hawser.h  info.h  lambda.h  s3.h  sns.h  sqs.h
include/hawser/service/: ec2.h  lambda.h  s3.h  sns.h  sqs.h
lib/: .gitignore  Makefile.am  buffer.c  buffer.h  config.c  config.h  credentials.c  credentials.h  curl.c  curl.h  encodings.c  encodings.h  hawser_internal.h  id.c  id.h  request.c  request.h  string.c  string.h  strings.c  strings.h
lib/config/: arguments.c  environment.c  file.c  iam.c  region.c  user-file.c
lib/credentials/: arguments.c  environment.c  file.c  iam.c  user-file.c
lib/ec2/: id.c  resourceId.c
lib/info/: endpoints.c  regions.c  services.c
lib/lambda/: id.c
lib/s3/: id.c
lib/service/: id.c  id.h
lib/service/ec2/: id.c
lib/service/lambda/: id.c
lib/service/s3/: id.c
lib/service/sns/: id.c
lib/service/sqs/: id.c
lib/sns/: id.c
lib/sqs/: id.c
src/: .gitignore  Makefile.am  base16.c  config.c  config.h  creds.c  ec2.c  uriencode.c
src/config/: arguments.c  file.c  iam.c  region.c  user-file.c
tests/: .gitignore  Makefile.am
tests/instance-data/latest/meta-data/: index.html  instance-id  instance-type
tests/instance-data/latest/meta-data/iam/: index.html
tests/instance-data/latest/meta-data/iam/security-credentials/: IAM-ROLE-NAME  index.html
tests/instance-data/latest/meta-data/placement/: availability-zone
tests/lib/: Makefile.am  ec2.c  ec2.h  encodings.c  encodings.h  info.c  info.h  s3.c  test.c
tests/lib/ec2/: id.c  resourceId.c
tests/lib/info/: endpoints.c  regions.c  services.c
tests/lib/lambda/: id.c
tests/lib/s3/: id.c
tests/lib/service/: ec2.c  ec2.h  lambda.c  lambda.h  s3.h  sns.c  sns.h  sqs.c  sqs.h
tests/lib/service/ec2/: id.c
tests/lib/service/lambda/: id.c
tests/lib/service/s3/: id.c
tests/lib/service/sns/: id.c
tests/lib/service/sqs/: id.c
tests/lib/sns/: id.c
tests/lib/sqs/: id.c
